# lmstudio-advanced

./: .gitallowed  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  package.json
.github/: CODEOWNERS
.github/workflows/: ci-security-scan.yml
.hooks/: autonomous_guard.py  guard_branch.sh  guard_logs.sh  guard_pii.sh  guard_proprietary.sh  install_hooks.sh
docs/: ARCHITECTURE.md
extensions/: README.md
extensions/model-router/: manifest.json
extensions/ocr-ingest/: manifest.json
extensions/smithery-cloud/: manifest.json
mcp/: README.md  claude_mcp_config.json  install_servers.sh
mcp/servers/: brave-search.json  fetch.json  filesystem.json  git.json  github.json  memory.json  sequential-thinking.json  smithery-registry.json  time.json
models/: glm-ocr.json  qwen3-vl-2b.json  qwen3-vl-embedding-2b.json
models/profiles/: interactive.json  legal-heavy.json  research-heavy.json
plugins/academic-search/: manifest.json
plugins/legal-nlp/: manifest.json
plugins/mcp-bridge/: manifest.json
plugins/web-research/: manifest.json
python/: pyproject.toml
python/src/lmstudio_advanced/: __init__.py
python/src/lmstudio_advanced/legal/: agent.py
python/src/lmstudio_advanced/mcp/: __init__.py  client.py
python/src/lmstudio_advanced/research/: agent.py
skills/: README.md
skills/anthropic/mcp-builder/: SKILL.md
skills/github/: SKILL.md
skills/legal/: SKILL.md
skills/openai/: SKILL.md
skills/pytorch/: SKILL.md
skills/research/: SKILL.md
skills/security/: SKILL.md
(+3 files in other folders)
