[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "lmstudio-advanced"
version = "0.1.0"
description = "Advanced LM Studio extensions — research, legal AI, and MCP connectors for Python"
authors = [{ name = "SBSCRPT Corp" }]
requires-python = ">=3.10"
dependencies = [
    "lmstudio>=0.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
legal = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "sentencepiece>=0.2.0",
    "pypdf>=4.1.0",
]
research = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]
all = ["lmstudio-advanced[legal,research]"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "tox>=4.14.0",
    "tox-pdm>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
